--- a/glossary.tex
+++ b/glossary.tex
@@ -12,6 +12,7 @@
 \nomenclature{\textbf{CNCF}}{Cloud Native Computing Foundation}
 \nomenclature{\textbf{GPU}}{Graphics Processing Unit}
 \nomenclature{\textbf{GRC}}{Governance, risk and compliance}
+\nomenclature{\textbf{GUI}}{Graphical User Interface}
 \nomenclature{\textbf{IaaS}}{Infrastructure as a Service}
 \nomenclature{\textbf{IaC}}{Infrastructure as Code}
 \nomenclature{\textbf{IEC}}{International Electrotechnical Commission}
